Less+Gulp automatization - fonts + outlines + other corrections

--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -1,3 +1,55 @@
 .catalog {
-  outline: pink solid 1px;
+  outline: 1px solid pink;
+}
+
+.catalog {
+  h1 {
+    padding-top: 72px;
+    padding-bottom: 72px;
+
+    background-color: @bg-title;
+
+    font-family: OpenSans Bold;
+    color: #000000;
+    font-size: 27px;
+    line-height: 30px;
+  }
+}
+
+.catalog__product-info {
+  border: 1px solid #ececec;
+
+  a {
+    display: block;
+    margin-top: 32px;
+
+    font-family: OpenSans Bold;
+    color: #000000;
+    font-size: 17px;
+    line-height: 24px;
+    text-decoration: none;
+  }
+}
+
+.catalog__product-text {
+  margin-top: 19px;
+  margin-bottom: 0;
+
+  font-family: OpenSans;
+  color: @font-color-dark;
+  font-size: 13px;
+  line-height: 30px;
+}
+
+.catalog__price {
+  margin-top: 28px;
+  margin-bottom: 28px;
+  padding-top: 28px;
+
+  font-family: OpenSans Bold;
+  color: #000000;
+  font-size: 15px;
+  line-height: 24px;
+
+  border-top: 1px solid #ececec;
 }
