--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -1,3 +1,36 @@
 .feedback {
-  outline: grey solid 1px;
+  outline: 1px solid red;
+}
+
+.feedback {
+  h2 {
+    font-family: OpenSans Bold;
+    color: #00000;
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
+
+.feedback__item {
+  p {
+    font-family: OpenSans;
+    color: @font-color-dark;
+    font-size: 15px;
+    line-height: 30px;
+  }
+}
+
+.feedback__author-fio {
+  font-family: OpenSans Bold;
+  color: #00000;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.feedback__author-login {
+  font-family: OpenSans;
+  color: @font-color-dark;
+  font-size: 18px;
+  line-height: 30px;
+  text-decoration: none;
 }
