--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -1,3 +1,79 @@
 .form {
-  outline: pink solid 1px;
+  outline: 1px solid pink;
+}
+
+.form {
+  h1 {
+    padding-top: 72px;
+    padding-bottom: 72px;
+    margin-bottom: 0;
+    margin-top: 0;
+
+    background-color: @bg-title;
+
+    font-family: OpenSans Bold;
+    color: #000000;
+    font-size: 27px;
+    line-height: 30px;
+  }
+
+  p {
+    margin-top: 30px;
+
+    font-family: OpenSans;
+    color: @font-color-dark;
+    font-size: 13px;
+    line-height: 24px;
+  }
+
+  fieldset {
+    border: none;
+    padding: 0;
+    margin: 0;
+
+    legend {
+      padding-top: 34px;
+      padding-bottom: 22px;
+
+      font-family: OpenSans Bold;
+      color: #63d1bb;
+      font-size: 17px;
+      line-height: 16px;
+      text-transform: uppercase;
+    }
+
+    label {
+      font-family: OpenSans Bold;
+      color: #000000;
+      font-size: 17px;
+      line-height: 18px;
+    }
+
+    input[type="radio"] {
+    }
+
+    input[type="checkbox"] {
+    }
+
+    input[type="text"] {
+      font-family: OpenSans;
+      color: #c7c7c7;
+      font-size: 17px;
+      line-height: 18px;
+
+      border: none;
+    }
+
+    textarea {
+      padding-left: 18px;
+      padding-top: 18px;
+
+      font-family: OpenSans;
+      color: #c7c7c7;
+      font-size: 17px;
+      line-height: 18px;
+
+      border: 2px solid #000000;
+    }
+  }
 }
