--- a/less/blocks/weekend-product.less
+++ b/less/blocks/weekend-product.less
@@ -1,3 +1,57 @@
 .weekend-product {
-  outline: grey solid 1px;
+  outline: 1px solid blue;
+}
+
+.weekend-product {
+  h2 {
+    font-family: OpenSans Bold;
+    color: #00000;
+    font-size: 25px;
+    line-height: 30px;
+
+    margin-top: 30px;
+  }
+  b {
+    font-family: OpenSans Bold;
+    font-size: 17px;
+    line-height: 16px;
+    color: #63d1bb;
+    text-transform: uppercase;
+
+    margin-top: 8px;
+  }
+}
+
+.weekend-product__info {
+  p {
+    font-family: OpenSans;
+    font-size: 15px;
+    line-height: 24px;
+    color: @font-color-dark;
+  }
+}
+
+.weekend-product__desc {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.weekend-product__desc-item {
+  div {
+    font-family: OpenSans;
+    font-size: 15px;
+    line-height: 20px;
+    color: @font-color-dark;
+  }
+}
+
+.weekend-product__price {
+  font-family: OpenSans Bold;
+  font-size: 17px;
+  line-height: 24px;
+  color: @font-color-dark;
+
+  padding-top: 28px;
+  padding-bottom: 28px;
 }
