--- a/less/fonts.less
+++ b/less/fonts.less
@@ -2,3 +2,8 @@
   font-family: OpenSans;
   src: url("/fonts/opensans.woff");
 }
+
+@font-face {
+  font-family: OpenSans Bold;
+  src: url("/fonts/opensansbold.woff");
+}
