--- a/less/layout.less
+++ b/less/layout.less
@@ -1,9 +1,6 @@
 body {
-  font-size: 15px;
-  line-height: 24px;
-  font-family: OpenSans, sans-serif;
-  color: @font-color-common;
-  font-style: normal;
+  margin: 0;
+  padding: 0;
 
   background-color: @bg-white;
 }
