--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,7 @@
+@font-color-dark: #444444;
+@font-color-light: #ffffff;
+@font-color-common: #000000;
+
 @bg-white: #ffffff;
-@font-color-common: #444444;
 @background-color: #221122;
+@bg-title: #f1f1f1;
