--- a/less/blocks/main-page-category.less
+++ b/less/blocks/main-page-category.less
@@ -1,3 +1,19 @@
 .main-page-category {
-  outline: pink solid 1px;
+  outline: 1px solid blue;
+}
+
+.main-page-category {
+  background: @bg-white url("/img/hero-mobile@1x.jpg") no-repeat;
+}
+
+.main-page-category {
+  h1 {
+    padding-top: 77px;
+    padding-bottom: 120px;
+
+    font-size: 27px;
+    line-height: 30px;
+    font-family: OpenSans Bold;
+    color: #00000;
+  }
 }
