--- a/less/style.less
+++ b/less/style.less
@@ -15,3 +15,4 @@
 @import "blocks/page-header.less";
 @import "blocks/process.less";
 @import "blocks/weekend-product.less";
+@import "blocks/btn.less";
