--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -1,5 +1,6 @@
 .form {
   outline: 1px solid pink;
+  min-height: 1805px;
 }
 
 .form {
@@ -75,5 +76,17 @@
 
       border: 2px solid #000000;
     }
+  }
+}
+
+@media @tablet-widths {
+  .form {
+    min-height: 1776px;
+  }
+}
+
+@media @desktop-widths {
+  .form {
+    min-height: 1773px;
   }
 }
