--- a/less/layout.less
+++ b/less/layout.less
@@ -1,6 +1,33 @@
 body {
-  margin: 0;
-  padding: 0;
+  font-size: 15px;
+  line-height: 30px;
+  font-family: OpenSans, Arial, sans-serif;
+  color: @font-color-dark;
+  font-style: normal;
 
   background-color: @bg-white;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+body {
+  background: @bg-white url("../img/mishka-index-mobile.jpg") no-repeat 50% 0px;
+  background-size: 320px auto;
+}
+
+@media @tablet-widths {
+  body {
+    background: @bg-white url("../img/mishka-index-tablet.jpg") no-repeat 50% 0px;
+    background-size: 768px auto;
+  }
+}
+
+@media @desktop-widths {
+  body {
+    background: @bg-white url("../img/mishka-index-desktop.jpg") no-repeat 50% 0px;
+    background-size: 1150px auto;
+  }
 }
