--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,7 @@
 @import "variables.less";
-@import "fonts.less";
+@import "mixins.less";
 @import "layout.less";
+@import "fonts.less";
 
 @import "blocks/about-us.less";
 @import "blocks/catalog.less";
