--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,10 @@
+@tablet-widths: ~"(min-width: 768px)";
+@desktop-widths: ~"(min-width: 1150px)";
+
 @font-color-dark: #444444;
 @font-color-light: #ffffff;
 @font-color-common: #000000;
+@font-family-common: "OpenSans", "Arial", sans-serif;
 
 @bg-white: #ffffff;
 @background-color: #221122;
