--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -1,16 +1,16 @@
 .catalog {
   outline: 1px solid pink;
+  min-height: 1444px;
 }
 
 .catalog {
-  h1 {
-    padding-top: 72px;
-    padding-bottom: 72px;
+  font-family: @font-family-common;
+  font-weight: bold;
+  color: #000000;
 
+  h1 {
     background-color: @bg-title;
 
-    font-family: OpenSans Bold;
-    color: #000000;
     font-size: 27px;
     line-height: 30px;
   }
@@ -21,10 +21,7 @@
 
   a {
     display: block;
-    margin-top: 32px;
 
-    font-family: OpenSans Bold;
-    color: #000000;
     font-size: 17px;
     line-height: 24px;
     text-decoration: none;
@@ -32,9 +29,6 @@
 }
 
 .catalog__product-text {
-  margin-top: 19px;
-  margin-bottom: 0;
-
   font-family: OpenSans;
   color: @font-color-dark;
   font-size: 13px;
@@ -42,14 +36,21 @@
 }
 
 .catalog__price {
-  margin-top: 28px;
-  margin-bottom: 28px;
-  padding-top: 28px;
-
-  font-family: OpenSans Bold;
-  color: #000000;
+  font-weight: normal;
   font-size: 15px;
   line-height: 24px;
 
   border-top: 1px solid #ececec;
+}
+
+@media @tablet-widths {
+  .catalog {
+    min-height: 1467px;
+  }
+}
+
+@media @desktop-widths {
+  .catalog {
+    min-height: 1100px;
+  }
 }
