--- a/less/blocks/main-page-category.less
+++ b/less/blocks/main-page-category.less
@@ -1,19 +1,30 @@
 .main-page-category {
-  outline: 1px solid blue;
-}
-
-.main-page-category {
-  background: @bg-white url("/img/hero-mobile@1x.jpg") no-repeat;
+  min-height: 488px;
+  position: relative;
+  background: @bg-white url("../img/hero-mobile@1x.jpg") no-repeat 50% -18px;
 }
 
 .main-page-category {
   h1 {
-    padding-top: 77px;
-    padding-bottom: 120px;
-
+    margin: 0;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 70px;
     font-size: 27px;
     line-height: 30px;
-    font-family: OpenSans Bold;
+    font-family: OpenSans, Arial, sans-serif;
+    font-weight: bold;
     color: #00000;
+    text-align: center;
   }
+}
+
+@media @tablet-widths {
+  .main-page-category{
+    min-height: 744px;
+  }
+}
+
+@media @desktop-widths {
+
 }
