--- a/less/blocks/process.less
+++ b/less/blocks/process.less
@@ -1,17 +1,12 @@
 .process {
   outline: 1px solid blue;
+  min-height: 559px;
 }
 
 .process {
-  margin-top: 32px;
-  padding-bottom: 32px;
-  margin-bottom: 58px;
   border: 1px solid #ececec;
 
   h2 {
-    margin-top: 28px;
-    margin-bottom: 0;
-
     font-family: OpenSans Bold;
     color: #000000;
     font-size: 17px;
@@ -19,9 +14,6 @@
   }
 
   p {
-    margin-top: 36px;
-    margin-bottom: 28px;
-
     font-family: OpenSans;
     color: @font-color-dark;
     font-size: 13px;
@@ -30,5 +22,16 @@
 }
 
 .process__video {
-  margin-top: 28px;
+}
+
+@media @tablet-widths {
+  .process {
+    min-height: 807px;
+  }
+}
+
+@media @desktop-widths {
+  .process {
+    min-height: 558px;
+  }
 }
