--- a/less/blocks/weekend-product.less
+++ b/less/blocks/weekend-product.less
@@ -1,57 +1,84 @@
 .weekend-product {
   outline: 1px solid blue;
+  min-height: 826px;
+  font-family: OpenSans, Arial, sans-serif;
+  font-weight: bold;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .weekend-product {
   h2 {
-    font-family: OpenSans Bold;
-    color: #00000;
+    color: #000000;
     font-size: 25px;
     line-height: 30px;
-
-    margin-top: 30px;
+    margin: 0;
+    padding-top: 27px;
   }
-  b {
-    font-family: OpenSans Bold;
+  h3 {
+    margin: 0;
     font-size: 17px;
     line-height: 16px;
     color: #63d1bb;
     text-transform: uppercase;
-
-    margin-top: 8px;
+    padding-top: 8px;
   }
 }
 
 .weekend-product__info {
   p {
-    font-family: OpenSans;
+    margin: 0;
+    font-weight: normal;
     font-size: 15px;
     line-height: 24px;
     color: @font-color-dark;
+    padding-top: 24px;
   }
 }
 
 .weekend-product__desc {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  padding-top: 17px;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 20px;
+  color: @font-color-dark;
 }
 
 .weekend-product__desc-item {
-  div {
-    font-family: OpenSans;
-    font-size: 15px;
-    line-height: 20px;
-    color: @font-color-dark;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    display: inline-block;
+    vertical-align: top;
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+
+  li:first-child {
+    width: 94px;
+  }
+
+  li:last-child {
   }
 }
 
 .weekend-product__price {
-  font-family: OpenSans Bold;
+  font-weight: normal;
   font-size: 17px;
   line-height: 24px;
   color: @font-color-dark;
+}
 
-  padding-top: 28px;
-  padding-bottom: 28px;
+@media @tablet-widths {
+  .weekend-product{
+    min-height: 626px;
+  }
+}
+
+@media @desktop-widths {
+  .weekend-product {
+    min-height: 804px;
+  }
 }
