--- a/less/fonts.less
+++ b/less/fonts.less
@@ -1,9 +1,10 @@
 @font-face {
   font-family: OpenSans;
-  src: url("/fonts/opensans.woff");
+  src: url("../fonts/opensans.woff");
 }
 
 @font-face {
-  font-family: OpenSans Bold;
-  src: url("/fonts/opensansbold.woff");
+  font-family: OpenSans;
+  font-weight: bold;
+  src: url("../fonts/opensansbold.woff");
 }
