--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,8 +1,12 @@
 .main-nav {
+  outline: 1px solid pink;
+
   position: absolute;
 }
 
 .main-nav__list {
+  outline: 1px solid pink;
+
   width: 320px;
 
   list-style: none;
@@ -11,6 +15,8 @@
 }
 
 .main-nav__user-list {
+  outline: 1px solid red;
+
   width: 320px;
   min-height: 158px;
 
@@ -20,6 +26,8 @@
 }
 
 .main-nav__sub-list {
+  outline: 1px solid yellow;
+
   display: none;
 }
 
