--- a/less/blocks/main-page-category.less
+++ b/less/blocks/main-page-category.less
@@ -1,7 +1,7 @@
 .main-page-category {
   min-height: 488px;
   position: relative;
-  background: @bg-white url("../img/hero-mobile@1x.jpg") no-repeat 50% -18px;
+  // background: @bg-white url("../img/hero-mobile@1x.jpg") no-repeat 50% -18px;
 }
 
 .main-page-category {
