--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,4 +1,6 @@
 .page-header__container {
+  outline: 1px solid orange;
+
   width: 320px;
 
   margin-left: auto;
@@ -6,6 +8,8 @@
 }
 
 .page-header__logo {
+  outline: 1px solid red;
+
   min-height: 79px;
   border-bottom: 1px solid #ececec;
 
@@ -17,6 +21,7 @@
 
 @media @tablet-widths {
   .page-header {
+    outline: 1px solid blue;
   }
 
   .page-header__container {
