--- a/less/blocks/main-page-nav.less
+++ b/less/blocks/main-page-nav.less
@@ -1,4 +1,6 @@
 .main-page-nav {
+  outline: 1px solid red;
+
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -8,6 +10,7 @@
 }
 
 .main-page-nav__list {
+
   list-style: none;
   padding: 0;
   margin: 0;
